# ModernMatrix-CPP

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build_and_run.sh  build_and_run_tests.sh  generate_docs.sh  main.cpp  matrix.hpp  ТЗ.md
docs/: MatrixAPI.md
docs/doxygen/html/: annotated.html  annotated_dup.js  classes.html  concepts.html  concepts.js  files.html  files_dup.js  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  graph_legend.html  index.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js
docs/doxygen/html/d0/d48/: matrix_8hpp__incl.dot
docs/doxygen/html/d0/d6f/: classmath_1_1Matrix.html  classmath_1_1Matrix.js
docs/doxygen/html/d1/d33/: conceptmath_1_1Arithmetic.html
docs/doxygen/html/d2/d4b/: structmath_1_1Matrix_1_1RowProxy.html  structmath_1_1Matrix_1_1RowProxy.js
docs/doxygen/html/d7/d58/: structmath_1_1Matrix_1_1ConstRowProxy.html  structmath_1_1Matrix_1_1ConstRowProxy.js
docs/doxygen/html/d7/d85/: namespacemath_1_1detail.html  namespacemath_1_1detail.js
docs/doxygen/html/d9/de4/: classmath_1_1Matrix__coll__graph.dot
docs/doxygen/html/da/ddd/: README_8md.html
docs/doxygen/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  concepts_0.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_c.js  namespaces_0.js  related_0.js  searchdata.js  (+12 more)
include/: matrix.hpp
src/: main.cpp
tests/: CMakeLists.txt  test_matrix.cpp
(+10 files in other folders)
